[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/Lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="buttonJoin" type="Button" parent="."]
margin_left = 625.868
margin_top = 362.36
margin_right = 839.868
margin_bottom = 446.36
text = "JOIN"

[node name="buttonHost" type="Button" parent="."]
margin_left = 234.661
margin_top = 349.436
margin_right = 448.661
margin_bottom = 433.436
text = "HOST"

[node name="IPValue" type="TextEdit" parent="."]
margin_left = 414.584
margin_top = 277.747
margin_right = 654.584
margin_bottom = 317.747

[node name="IPLabel" type="Label" parent="."]
margin_left = 483.003
margin_top = 246.796
margin_right = 600.003
margin_bottom = 285.796
text = "Enter an IP"

[node name="LaunchMatch" type="Button" parent="."]
visible = false
margin_left = 403.158
margin_top = 24.2105
margin_right = 653.158
margin_bottom = 85.2105
disabled = true
text = "Start the game"
[connection signal="pressed" from="buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="buttonHost" to="." method="_on_buttonHost_pressed"]
[connection signal="text_changed" from="IPValue" to="." method="_on_IPValue_text_changed"]
[connection signal="pressed" from="LaunchMatch" to="." method="_on_LaunchMatch_pressed"]
